syntax = "proto3";

package auth;

import "user.proto";

enum LoginServiceTypes {
  Password = 0;
  Google = 1;
}

message Session {
  string id = 1;
  string email = 2;
  int32 created = 3;
  int32 expires = 4;
}

message LoginTypeParams {
  string accessToken = 1;
  string userId = 2;
  string password = 3;
  string email = 4;
}

message LoginRequest {
  LoginServiceTypes service = 1;
  LoginTypeParams params = 2;
}

message LoginResponse {
  Session session = 1;
  user.User user = 2;
}

message LogoutRequest {
  string sessionId = 1;
}

message LogoutResponse {
  bool success = 1;
}

// Password Management Messages
message UpdatePasswordRequest {
  string userId = 1;
  string oldPassword = 2;
  string newPassword = 3;
  string confirmPassword = 4;
}

message UpdatePasswordResponse {
  bool success = 1;
}

message ForgotPasswordRequest {
  string email = 1;
}

message ForgotPasswordResponse {
  bool success = 1;
}

// Account Verification Messages
message VerifyAccountRequest {
  string email = 1;
  string verificationCode = 2;
}

message VerifyAccountResponse {
  bool success = 1;
}

message ResendVerificationCodeRequest {
  string email = 1;
}

message ResendVerificationCodeResponse {
  bool success = 1;
}

message VerifyActivationLinkRequest {
  string token = 1;
}

message VerifyActivationLinkResponse {
  string email = 1;
  string verificationCode = 2;
}

message ReadSessionRequest {
  string sessionId = 1;
}

message ReadSessionResponse {
  Session session = 1;
}