syntax = "proto3";

package user;

import "address.proto";

enum LoginServiceTypes {
  Password = 0;
  Google = 1;
}

enum UserRoles {
  ADMIN = 0;
  USER = 1;
}

message PasswordStruct {
  string hashed = 1;  
}

message AuthServices {
  PasswordStruct password = 1;
}

message Settings {
  string stripeId = 1;
}

message EmailObject {
  string address = 1;
  bool verified = 2;
  bool primary = 3;
  string verificationCode = 4;
}

message User {
  string id = 1;
  string username = 2;
  string primaryEmail = 3;
  string fullName = 4; 
  optional string phone = 5;
  optional address.Address address = 6;
  optional string sex = 7;
  optional string dob = 8;
  optional string bio = 9;
  UserRoles role = 10;

  repeated EmailObject emails = 11;

  AuthServices services = 12;
  optional Settings settings = 13;
}

message CreateRequest {
  string username = 1;
  string password = 2;
  string email = 3;
  string fullName = 4;
  
  LoginServiceTypes service = 5;
  map<string, string> tokens = 6;
}

message CreateResponse {
  string activationLink = 1;
}

message DeleteRequest {
  string id = 1;
}

message DeleteResponse {
  bool success = 1;
}

message ReadRequest {
  string query = 5;
}

message ReadResponse {
  User user = 1;
}

message UpdateRequest {
  User user = 1;
}

message UpdateResponse {
  User user = 1;
}

message SearchRequest {
  string username = 1;
  string email = 2;
  int32 limit = 3;
  int32 offset = 4;
}

message SearchResponse {
  repeated User users = 1;
}
